...
                verticalAlignment = Alignment.CenterVertically,
            ) {
                when (navIcon) {
                    NavIcon.Drawer -> NavCircleButton(onClick = onNavClick) {
                        Icon(
                            Icons.Outlined.Menu,
                            contentDescription = "Menu",
                            tint = MaterialTheme.colorScheme.onPrimaryContainer,
                        )
                    }
                    NavIcon.Back -> NavCircleButton(onClick = onNavClick) {
                        Icon(
                            Icons.AutoMirrored.Outlined.ArrowBack,
...
